# cmake-test

./: CMakeLists.txt  CPackOptions.cmake  I18N.cpp  I18N.hpp  LICENSE  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  README  README.md  SCMVersion.cmake  Version.cmake  WELCOME  cmake-test.pro  cmake-test.qrc  cmake-test.txt  cmake_uninstall.cmake.in  config.h.in  main.cpp
texts/: text_fr.rtf
translations/: cmake-test_fr.ts
